[gd_scene load_steps=48 format=2]

[ext_resource path="res://objects/enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/enemy/bodyguard/walk/Bodyguard_walking_0002.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0001.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0002.png" type="Texture" id=4]
[ext_resource path="res://objects/mechanics/finite_state_machine/EnemyStateController.gd" type="Script" id=5]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_enemy/movement/idle.gd" type="Script" id=6]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_enemy/movement/move/approach.gd" type="Script" id=7]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_enemy/movement/move/jump_approach.gd" type="Script" id=8]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_enemy/movement/attack.gd" type="Script" id=9]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_enemy/movement/damage.gd" type="Script" id=10]
[ext_resource path="res://resources/shader/pixel_outline.shader" type="Shader" id=11]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_enemy/movement/move/wander.gd" type="Script" id=12]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0004.png" type="Texture" id=13]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0003.png" type="Texture" id=14]
[ext_resource path="res://resources/sprites/enemy/bodyguard/walk/Bodyguard_walking_0001.png" type="Texture" id=15]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0005.png" type="Texture" id=16]
[ext_resource path="res://resources/sprites/enemy/bodyguard/walk/Bodyguard_walking_0003.png" type="Texture" id=17]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0006.png" type="Texture" id=18]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0007.png" type="Texture" id=19]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0008.png" type="Texture" id=20]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0009.png" type="Texture" id=21]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0010.png" type="Texture" id=22]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0011.png" type="Texture" id=23]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0013.png" type="Texture" id=24]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0012.png" type="Texture" id=25]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0014.png" type="Texture" id=26]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0015.png" type="Texture" id=27]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0016.png" type="Texture" id=28]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0017.png" type="Texture" id=29]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0019.png" type="Texture" id=30]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0021.png" type="Texture" id=31]
[ext_resource path="res://resources/sprites/enemy/bodyguard/walk/Bodyguard_walking_0004.png" type="Texture" id=32]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0018.png" type="Texture" id=33]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0022.png" type="Texture" id=34]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0020.png" type="Texture" id=35]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0023.png" type="Texture" id=36]
[ext_resource path="res://resources/sprites/enemy/bodyguard/idle/bodyguardm_idle__0024.png" type="Texture" id=37]
[ext_resource path="res://objects/enemy/ItemFactory.tscn" type="PackedScene" id=38]
[ext_resource path="res://resources/sprites/enemy/bodyguard/walk/Bodyguard_walking_0005.png" type="Texture" id=40]
[ext_resource path="res://resources/sprites/enemy/bodyguard/walk/Bodyguard_walking_0006.png" type="Texture" id=41]
[ext_resource path="res://resources/sprites/enemy/bodyguard/walk/Bodyguard_walking_0007.png" type="Texture" id=42]
[ext_resource path="res://resources/sprites/enemy/bodyguard/walk/Bodyguard_walking_0008.png" type="Texture" id=43]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 11 )
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 2 ), ExtResource( 17 ), ExtResource( 32 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "move",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36, 121.999 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 120.999, 198.998 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 61.3382, 16 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 43
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
START_STATE = NodePath("Approach")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Approach" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="JumpApproach" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Damage" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
LERP_FACTOR = 0.01

[node name="ItemFactory" parent="." instance=ExtResource( 38 )]

[node name="LifeBar" type="ProgressBar" parent="."]
margin_left = -46.7184
margin_top = -252.108
margin_right = 46.2816
margin_bottom = -238.108
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( -4.41931, -107.116 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "idle"
frame = 10
playing = true

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( 36, 0 )
collision_layer = 0
collision_mask = 4

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, -106 )
shape = SubResource( 3 )

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2( 80, 0 )
collision_layer = 0
collision_mask = 4

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( -81.0003, -103 )
rotation = -1.5708
shape = SubResource( 4 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="AttackCooldown" type="Timer" parent="."]

[node name="EnemySoundsPlayer" type="AudioStreamPlayer2D" parent="."]
bus = "Sounds"
[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine" method="_on_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="StateMachine" method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="StateMachine" method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="StateMachine" method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="StateMachine" method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
